use react-admin validation shape in API
